fix overlapping navbar on narrow screen sizes

--- a/mafiasi/base/static/css/main.css
+++ b/mafiasi/base/static/css/main.css
@@ -1,9 +1,3 @@
-/*---------- GENERIC ---------*/
-
-#wrap > .container {
-    padding-top: 60px;
-}
-
 /*------------ DASHBOARD --------*/
 #dashboard .glyphicon {
     top: -7px;
